WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130660
When the mouse is upped after dragged out of shadowDOM, it should lose :active.
https://bugs.webkit.org/show_bug.cgi?id=130660
Summary
When the mouse is upped after dragged out of shadowDOM, it should lose :active.
Sanghyup Lee
Reported
2014-03-23 23:18:50 PDT
This caused a regression after
r165037
. When we have to clear :active style of shadow DOM, we should clear host's style.
Attachments
Patch
(4.80 KB, patch)
2014-03-24 00:07 PDT
,
Sanghyup Lee
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sanghyup Lee
Comment 1
2014-03-24 00:07:31 PDT
Created
attachment 227625
[details]
Patch
Darin Adler
Comment 2
2014-03-24 01:07:00 PDT
Comment on
attachment 227625
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=227625&action=review
> Source/WebCore/dom/Document.cpp:5844 > + for (Element* curr = oldActiveElement; curr; curr = curr->parentOrShadowHostElement()) {
To set these flags we use the render tree. To clear them we are using the DOM tree. I suspect this inconsistency could cause more problems than just this one.
Sanghyup Lee
Comment 3
2014-03-25 18:49:23 PDT
Darin, Thanks for your review. I'll check it and upload another patch.
Jinwoo Song
Comment 4
2014-03-25 19:00:37 PDT
Comment on
attachment 227625
[details]
Patch As Darin pointed out, the inconsistent tree traversing between set and clear phase needs to be investigated, but it may be followed in other bug. So I set cq+ for this patch.
WebKit Commit Bot
Comment 5
2014-03-25 19:30:54 PDT
Comment on
attachment 227625
[details]
Patch Clearing flags on attachment: 227625 Committed
r166277
: <
http://trac.webkit.org/changeset/166277
>
WebKit Commit Bot
Comment 6
2014-03-25 19:30:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug