When the mouse is upped after dragged out of shadowDOM, it should lose :active. https://bugs.webkit.org/show_bug.cgi?id=130660

Patch by Sanghyup Lee <sh53.lee@samsung.com> on 2014-03-25
Reviewed by Darin Adler.

Source/WebCore:

This caused a regression after r165037.
When we have to clear :active style of shadow DOM, we should clear host's style.
This patch replaces parentElement() by parentOrShadowHostElement().

* dom/Document.cpp:
(WebCore::Document::updateHoverActiveState):

LayoutTests:

* fast/css/hover-active-drag-expected.txt: Added a test for textarea.
* fast/css/hover-active-drag.html: Updated.

Canonical link: https://commits.webkit.org/148799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166277 268f45cc-cd09-0410-ab3c-d52691b4dbfc